--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -735,7 +735,17 @@ subsections, however these two catalogs are mutually exclusive with one another.
 \includegraphics[width=\textwidth]{highK-0}
 \end{center}
 \caption{%
-TODO
+Examples of stars in our high-$K$ sample, i.e. stars that likely have companions
+(see \sectionname~\ref{sec:catalog-confident}), with different numbers of
+visits.
+Left panels show the data (black markers, error bars are the visit velocity
+uncertainties) with 128 random orbits from the \nposterior\ posterior samples
+under-plotted (grey lines); The \texttt{APOGEE\_ID} of each target and the
+number of visits that pass our quality cuts, $N$, are indicated on each panel.
+Right panels show the \nposterior\ posterior samples visualized in
+period--eccentricity space.
+In most cases, despite confidently having companions based on the RV amplitude,
+the permitted orbit fits are highly multimodal.
 \label{fig:highK-0}
 }
 \end{figure}
@@ -745,7 +755,7 @@ TODO
 \includegraphics[width=\textwidth]{highK-1}
 \end{center}
 \caption{%
-TODO
+Continuation of \figurename~\ref{fig:highK-0}.
 \label{fig:highK-1}
 }
 \end{figure}
@@ -755,7 +765,8 @@ TODO
 \includegraphics[width=\textwidth]{lowK-0}
 \end{center}
 \caption{%
-TODO
+Same as \figurename~\ref{fig:highK-0}, but for stars in the low-$K$ sample, i.e.
+stars that have undetected or no companions.
 \label{fig:lowK-0}
 }
 \end{figure}
@@ -765,7 +776,7 @@ TODO
 \includegraphics[width=\textwidth]{lowK-1}
 \end{center}
 \caption{%
-TODO
+Continuation of \figurename~\ref{fig:lowK-0}.
 \label{fig:lowK-1}
 }
 \end{figure}
