--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -815,10 +815,6 @@ possible?}
 \subsection{Confident companions with effectively uniquely determined orbits}
 \label{sec:catalog-unimodal}
 
-\todo{Many examples of stars that are probably unimodal}
-
-\todo{Should figures be phase-folded?}
-
 \todo{Also include M2min and primary mass when possible?}
 
 % Notebook: HighK-unimodal
@@ -827,7 +823,8 @@ possible?}
 \includegraphics[width=\textwidth]{highK-unimodal}
 \end{center}
 \caption{%
-Examples of high-$K$ stars with effectively unimodal posterior samplings.
+Examples of high-$K$ stars with effectively unimodal posterior samplings and
+converged MCMC samplings.
 Each panel shows the data (black markers), phase-folded at the period of the
 posterior sample with maximum posterior probability.
 Visit velocity uncertainties are shown as black error bars (these are typically
@@ -867,12 +864,23 @@ companions with $XX < P < XX$~day.
 
 \subsection{Evidence for tidal circularization at $P\sim 10~\textrm{day}$}
 
-\todo{Expectation from theory? What's spectial at 10 days?}
+\todo{Expectation from theory? What's special at 10 days?}
 
-\figurename~\ref{fig:todo} shows the orbital period and eccentricity...
+\figurename~\ref{fig:unimodalPe} shows the orbital period and eccentricity...
 
 \todo{Period - eccentricity plot? Tidal circularization (See "Debug MCMC
 continue")}
+
+% Notebook: HighK-unimodal
+\begin{figure}[hp]
+\begin{center}
+\includegraphics[width=\textwidth]{unimodal-P-e}
+\end{center}
+\caption{%
+TODO:
+\label{fig:unimodalPe}
+}
+\end{figure}
 
 
 \subsection{Companion masses and mass ratios}
