--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -821,7 +821,7 @@ possible?}
 
 \todo{Also include M2min and primary mass when possible?}
 
-% Notebook: HighK-unimodal
+% Notebook: HighK-unimodal-catalog 
 \begin{figure}[hp]
 \begin{center}
 \includegraphics[width=\textwidth]{highK-unimodal}
