add all figure notebooks

--- a/notebooks/figures/HighK-unimodal.ipynb
+++ b/notebooks/figures/HighK-unimodal.ipynb
@@ -41,6 +41,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "table_path = '../../paper/1-catalog/tables/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Session, _ = db_connect(path.join(TWOFACE_CACHE_PATH, 'apogee.sqlite'))\n",
     "session = Session()\n",
     "\n",
@@ -378,7 +387,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_catalog.write('../../data/products/high-K-unimodal.fits')"
+    "full_catalog.write(path.join(table_path, 'high-K-unimodal.fits'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_catalog[full_catalog.colnames[:18]][:8]"
    ]
   },
   {
