--- a/notebooks/figures/HighK.ipynb
+++ b/notebooks/figures/HighK.ipynb
@@ -37,11 +37,19 @@
    "outputs": [],
    "source": [
     "plot_path = '../../paper/1-catalog/figures/'\n",
+    "table_path = '../../paper/1-catalog/tables/'\n",
     "\n",
     "Session, _ = db_connect(path.join(TWOFACE_CACHE_PATH, 'apogee.sqlite'))\n",
     "session = Session()\n",
     "\n",
     "samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter.hdf5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See: Sample K cuts.ipynb for setting `StarResult.high_K`"
    ]
   },
   {
