--- a/paper/1-catalog/tables/unimodal-schema.tex
+++ b/paper/1-catalog/tables/unimodal-schema.tex
@@ -50,10 +50,9 @@
     parameters.
     All columns for orbital parameters are the median values over the posterior
     samples (either from \thejoker, or from \package{emcee}).
-    All columns ending in \texttt{\_err} are robust estimates of the
-    standard-deviation of the posterior samples, $\sigma$, computed using the
-    median absolute deviation, $\textrm{MAD}$, as $\sigma \approx 1.5 \times
-    \textrm{MAD}$.
+    All columns ending in \texttt{\_err} are estimates of the standard-deviation
+    of the posterior samples, $\sigma$, computed using the median absolute
+    deviation, $\textrm{MAD}$, as $\sigma \approx 1.5 \times \textrm{MAD}$.
     }
     \label{tbl:highK-unimodal}
 \end{table}
