--- a/paper/1-catalog/tables/unimodal-schema.tex
+++ b/paper/1-catalog/tables/unimodal-schema.tex
@@ -48,8 +48,8 @@
     stars in the high-$K$, unimodal sample:
     Stars that likely have companions and have well-determined orbital
     parameters.
-    All columns for orbital parameters are the median values over the posterior
-    samples (either from \thejoker, or from \package{emcee}).
+    All orbital parameter values are from the maximum \textit{a posteriori}
+    (MAP) posterior sample (either from \thejoker, or from \package{emcee}).
     All columns ending in \texttt{\_err} are estimates of the standard-deviation
     of the posterior samples, $\sigma$, computed using the median absolute
     deviation, $\textrm{MAD}$, as $\sigma \approx 1.5 \times \textrm{MAD}$.
