--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -859,12 +859,18 @@ We define a period resolution for each star $\Delta =
 the minimum period sample value, and $T$ is the epoch span of the data for that
 star.
 We consider a sampling to be unimodal when $P_{\textrm{max}} - P_{\textrm{min}}
-< \Delta$ (see \sectionname~2 of \citealt{Price-Whelan:2017}).
+< \Delta$ (see \sectionname~2 of \citealt{Price-Whelan:2017}); \nunimodal\ stars
+pass this cut.
 Unlike the multi-modal stars, the posterior pdfs for these stars can be
 approximated using point-estimates and standard deviations of their respective
 samplings.
-
-\tablename~\ref{tbl:highK-unimodal} contains ...
+We report maximum \textit{a posteriori} sample values for the orbital
+parameters, along with other computed quantities for all \nunimodal\ stars in
+this high-$K$, unimodal sample.
+For stars with measured primary masses, $M_1$, from other work
+(\citealt{Ness:2015}), we compute the minimum companion mass, $M_{2,
+\textrm{min}}$ and include both masses in this catalog.
+\tablename~\ref{tbl:highK-unimodal} contains descriptions and units for all columns in the high-$K$, unimodal sample catalog.
 
 \input{tables/unimodal-schema}
 
