--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -864,13 +864,17 @@ pass this cut.
 Unlike the multi-modal stars, the posterior pdfs for these stars can be
 approximated using point-estimates and standard deviations of their respective
 samplings.
-We report maximum \textit{a posteriori} sample values for the orbital
+We report maximum \textit{a posteriori} (MAP) sample values for the orbital
 parameters, along with other computed quantities for all \nunimodal\ stars in
 this high-$K$, unimodal sample.
 For stars with measured primary masses, $M_1$, from other work
 (\citealt{Ness:2015}), we compute the minimum companion mass, $M_{2,
 \textrm{min}}$ and include both masses in this catalog.
-\tablename~\ref{tbl:highK-unimodal} contains descriptions and units for all columns in the high-$K$, unimodal sample catalog.
+We additionally join with the \apogee\ \DR\ \texttt{allStar} catalog and provide
+all columns from this catalog for convenience.
+\tablename~\ref{tbl:highK-unimodal} contains descriptions and units for all
+columns in the high-$K$, unimodal sample catalog, available online.
+\todo{where?}
 
 \input{tables/unimodal-schema}
 
